- Improvement: Active students group with argument to check enrolments

32.9.2 (16-09-2021)
- Refactor: Add method to update execution course name

32.9.1 (15-09-2021)
- Refactor: Rename slot to mark available school classes for enrolment

32.9.0 (13-09-2021)
- Improvement: Mark available school classes for automatic enrolment

32.8.13 (06-09-2021)
- Bug fix: OrRule should evaluate to true on prefilter level

32.8.12 (26-08-2021)
- Fix: Changed degree designation (SchoolLevelType.DEGREE) #UL-REIT-2403

32.8.11 (23-08-2021)
- Improvement: Only attempt shift enrolment in the first suitable capacity for provided registration

32.8.10 (29-07-2021)
- Bug Fix: Fix NPE due to inexsistent previous party contact

32.8.9 (26-07-2021)
- Improvement: When execution course has multiple competences, the resulted code should be sorted 
- Bug fix: Fixed NPE checking if rule applies to context
- Bug fix: Fixed wrong english translation for annuled enrolment state
- Bug fix: Allow empty marks

32.8.8 (24-06-2021)
- Refactor: Change Photograph delete to be able to delete any photo

32.8.7 (17-05-2021)
- Improvement: Added method to check if user is member of profile

32.8.6 (19-04-2021)
- Improvement: Added edit method to ExtraCurricularActivity 

32.8.5 (16-04-2021)
- Refactor: Country deprecated methods cleanup
- Improvement: fixing labels

32.8.4 (14-04-2021)
- Bug fix: When listing rooms schedules, take also into account lesson instances occupations

32.8.3 (08-04-2021)
- Bug fix: Fixed getting objects of a type for a given permission and user

32.8.2 (03-04-2021)
- Refactor: Deprecated some DegreeInfo getters and setters
- Fix: Change Teacher role type expression in order to include also inactive teachers in find person functionality

32.8.1 (22-03-2021)
- Refactor: added Session supplier to handle authenticated email servers

32.8.0 (16-03-2021)
- Improvement: Add slot to indicate if lesson is extraordinary
- Improvement: Add selfAccountCreated to Person