@@ -1,4 +1,5 @@
 - Improvement: Active students group with argument to check enrolments
+- Refactor: Add IdDocumentTypeObject creator and finder methods
 
 32.9.2 (16-09-2021)
 - Refactor: Add method to update execution course name
